--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
+        "firebase/php-jwt": "^6.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "league/fractal": "^0.20.1",
