--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,17 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "algolia/algoliasearch-client-php": "^3.4",
         "firebase/php-jwt": "^6.8",
         "guzzlehttp/guzzle": "^7.2",
+        "http-interop/http-factory-guzzle": "^1.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/scout": "^10.2",
         "laravel/tinker": "^2.8",
+        "laraveldaily/larastarters": "^2.3",
         "league/fractal": "^0.20.1",
+        "meilisearch/meilisearch-php": "^1.3",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
