--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "@fullcalendar/interaction": "^5.11.0",
         "@fullcalendar/timegrid": "^5.11.0",
         "@fullcalendar/vue3": "^5.11.1",
-        "@headlessui/vue": "^1.4.2",
+        "@headlessui/vue": "^1.7.16",
+        "@heroicons/vue": "^2.0.18",
         "@popperjs/core": "^2.11.2",
         "@suadelabs/vue3-multiselect": "^1.0.2",
         "@vuelidate/core": "^2.0.0-alpha.42",
@@ -42,6 +43,7 @@
         "vue-feather": "^2.0.0-rc.1",
         "vue-flatpickr-component": "^9.0.5",
         "vue-i18n": "^9.1.10",
+        "vue-multiselect": "^3.0.0-beta.2",
         "vue-router": "^4.2.4",
         "vue3-apexcharts": "^1.4.1",
         "vue3-carousel": "^0.1.40",
