--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laraveldaily/larastarters": "^2.3",
         "league/fractal": "^0.20.1",
         "meilisearch/meilisearch-php": "^1.3",
+        "spatie/laravel-data": "^3.8",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
