--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "vue3-perfect-scrollbar": "^1.5.5",
         "vue3-quill": "^0.2.6",
         "vue3-scroll-spy": "^1.0.8",
+        "vuejs-paginate-next": "^1.0.2",
         "vuex": "^4.0.0"
     },
     "devDependencies": {
