--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "algolia/algoliasearch-client-php": "^3.4",
+        "fakerphp/faker": "^1.23",
         "firebase/php-jwt": "^6.8",
         "guzzlehttp/guzzle": "^7.2",
         "http-interop/http-factory-guzzle": "^1.2",
@@ -16,12 +17,12 @@
         "laravel/tinker": "^2.8",
         "laraveldaily/larastarters": "^2.3",
         "league/fractal": "^0.20.1",
+        "maatwebsite/excel": "^3.1",
         "meilisearch/meilisearch-php": "^1.3",
         "spatie/laravel-data": "^3.8",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
