--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,18 @@
         "firebase/php-jwt": "^6.8",
         "guzzlehttp/guzzle": "^7.2",
         "http-interop/http-factory-guzzle": "^1.2",
+        "intervention/image": "^2.7",
+        "laravel-workflow/laravel-workflow": "^1.0",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/scout": "^10.2",
         "laravel/tinker": "^2.8",
         "laraveldaily/larastarters": "^2.3",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "league/fractal": "^0.20.1",
         "maatwebsite/excel": "^3.1",
         "meilisearch/meilisearch-php": "^1.3",
+        "pbmedia/laravel-ffmpeg": "^8.3",
         "spatie/laravel-data": "^3.8",
         "tymon/jwt-auth": "^2.0"
     },
