--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@heroicons/vue": "^2.0.18",
         "@popperjs/core": "^2.11.2",
         "@suadelabs/vue3-multiselect": "^1.0.2",
+        "@vueform/multiselect": "^2.6.6",
         "@vuelidate/core": "^2.0.0-alpha.42",
         "@vuelidate/validators": "^2.0.0-alpha.30",
         "@vueuse/core": "^7.5.1",
