--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "@fullcalendar/vue3": "^5.11.1",
         "@headlessui/vue": "^1.7.16",
         "@heroicons/vue": "^2.0.18",
-        "@popperjs/core": "^2.11.2",
+        "@popperjs/core": "^2.11.8",
         "@suadelabs/vue3-multiselect": "^1.0.2",
         "@vueform/multiselect": "^2.6.6",
         "@vuelidate/core": "^2.0.0-alpha.42",
@@ -35,6 +35,7 @@
         "maska": "^1.5.0",
         "path": "^0.12.7",
         "sweetalert2": "^11.4.17",
+        "v-calendar": "^3.1.2",
         "v-tables-3": "^0.4.7",
         "vue": "^3.2.13",
         "vue-clipboard3": "^2.0.0",
