--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "algolia/algoliasearch-client-php": "^3.4",
+        "barryvdh/laravel-dompdf": "^2.0",
         "fakerphp/faker": "^1.23",
         "firebase/php-jwt": "^6.8",
         "guzzlehttp/guzzle": "^7.2",
@@ -23,6 +24,7 @@
         "maatwebsite/excel": "^3.1",
         "meilisearch/meilisearch-php": "^1.3",
         "pbmedia/laravel-ffmpeg": "^8.3",
+        "phpoffice/phpspreadsheet": "^1.29",
         "spatie/laravel-data": "^3.8",
         "tymon/jwt-auth": "^2.0"
     },
