--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "league/fractal": "^0.20.1",
         "maatwebsite/excel": "^3.1",
         "meilisearch/meilisearch-php": "^1.3",
+        "mpdf/mpdf": "^8.2",
         "pbmedia/laravel-ffmpeg": "^8.3",
         "phpoffice/phpspreadsheet": "^1.29",
         "spatie/laravel-data": "^3.8",
