--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "algolia/algoliasearch-client-php": "^3.4",
         "barryvdh/laravel-dompdf": "^2.0",
+        "dompdf/dompdf": "^2.0",
         "fakerphp/faker": "^1.23",
         "firebase/php-jwt": "^6.8",
         "guzzlehttp/guzzle": "^7.2",
@@ -23,10 +24,15 @@
         "league/fractal": "^0.20.1",
         "maatwebsite/excel": "^3.1",
         "meilisearch/meilisearch-php": "^1.3",
+        "mnvx/lowrapper": "^1.0",
         "mpdf/mpdf": "^8.2",
         "pbmedia/laravel-ffmpeg": "^8.3",
         "phpoffice/phpspreadsheet": "^1.29",
         "spatie/laravel-data": "^3.8",
+        "symfony/http-client": "^6.4",
+        "symfony/mailgun-mailer": "^6.4",
+        "tecnickcom/tc-lib-pdf": "^8.0",
+        "tecnickcom/tcpdf": "^6.6",
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
